--- a/index.html
+++ b/index.html
@@ -83,19 +83,35 @@
                 <div class="inner"></div>
             </article>
             <article class="item">
-                <div class="inner"></div>
+                <div class="inner">
+                    <video src="img/frozen.mp4" muted>
+                    </video>
+                    <a href="img/frozen.mp4"><i class="far fa-play-circle"></i></a>
+                    <div class="txt">
+                        <p>Nightwing</p>
+                        <span>New Episode Trailer</span>
+                    </div>
+                   
+                </div>
             </article>
             <article class="item">
                 <div class="inner"></div>
             </article>
             <article class="item">
-                <div class="inner"></div>
+                <div class="inner">
+                    <p>Naomi campbell <span>Withdraws In The New Film</span> Of The<br> Indian Director</p>
+                </div>
             </article>
             <article class="item">
-                <div class="inner"></div>
+                <div class="inner">
+                    <p>Johnny Depp is <span>Strongly Overpaid</span></p>
+                </div>
             </article>
             <article class="item">
-                <div class="inner"></div>
+                <div class="inner">
+                    <p>18 Most Terrifying<br> Footage Movies In 2018</p>
+                    <a href="#"> LEARN MORE</a>
+                </div>
             </article>
             <article class="item">
                 <div class="inner"></div>
