--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                 </div>
             </article>
             <article class="item">
+                <img src="img/img6.jpg" alt="">
                 <div class="inner">
                     <p>Mega Planet</p>
+                    
                 </div>
             </article>
             <article class="item">
@@ -91,7 +93,6 @@
                         <p>Nightwing</p>
                         <span>New Episode Trailer</span>
                     </div>
-                   
                 </div>
             </article>
             <article class="item">
@@ -117,7 +118,13 @@
                 <div class="inner"></div>
             </article>
             <article class="item">
-                <div class="inner"></div>
+                <div class="inner">
+                </div>
+            </article>
+            <article class="item">
+                <div class="inner">
+                    <p>Willis have a <br><span>Britniess Happniess</span></p>
+                </div>
             </article>
         </section>
     </main>
