grid photo popup 연결

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script defer src="js/isotope-sizer.js"></script>
     <script src="https://kit.fontawesome.com/a5faf288a0.js" crossorigin="anonymous"></script>
     <script defer src="js/main.js"></script>
+    <script defer src="js/photo.js"></script>
+
 </head>
 <body>
     <main>
@@ -20,7 +22,7 @@
 
                 <nav class="menuWeb">
                     <ul class="util">
-                        <li><a href="join.html">Login<i class="far fa-user"></i></a></li>
+                        <li><a href="#">Login<i class="far fa-user"></i></a></li>
                     </ul>
                 </nav>
 
@@ -49,6 +51,7 @@
 
             </article>
             <article class="item">
+                <a href="img/back3_3.jpg"><img src="img/back3.png" alt=""></a>
                 <div class="inner">
                     <p>MOVIE<BR>THEATERS</p>
                 </div>
@@ -60,7 +63,7 @@
                 </div>
             </article>
             <article class="item">
-                <img src="img/img6.jpg" alt="">
+                <a href="img/img6.jpg"><img src="img/img6.jpg" alt=""></a>
                 <div class="inner">
                     <p>Mega Planet</p>
                     
@@ -72,6 +75,7 @@
                 </div>
             </article>
             <article class="item">
+                <a href="img/back1_1.jpg"><img src="img/back1.png" alt=""></a>
                 <div class="inner">
                     <p>Choyhona<br>Salom</p>
                 </div>
@@ -93,6 +97,7 @@
                 </div>
             </article>
             <article class="item">
+                <a href="img/back2_2.jpg"><img src="img/back2.png" alt=""></a>
                 <div class="inner">
                     <p>Panorama</p>
                 </div>
@@ -113,13 +118,12 @@
                 </div>
             </article>
             <article class="item">
+                <a href="img/img2.jpg"><img src="img/img2.jpg" alt=""></a>
                 <div class="inner"></div>
             </article>
-            <article class="item">
+            <article class="item video">
+                <a href="img/frozen.mp4"><video src="img/frozen.mp4" muted></video><i class="far fa-play-circle"></i></a>
                 <div class="inner">
-                    <video src="img/frozen.mp4" muted>
-                    </video>
-                    <a href="img/frozen.mp4"><i class="far fa-play-circle"></i></a>
                     <div class="txt">
                         <p>Nightwing</p>
                         <span>New Episode Trailer</span>
@@ -127,6 +131,7 @@
                 </div>
             </article>
             <article class="item">
+                <a href="img/img4.jpg"><img src="img/img4.jpg" alt=""></a>
                 <div class="inner"></div>
             </article>
             <article class="item">
@@ -140,15 +145,18 @@
                 </div>
             </article>
             <article class="item">
+                <a href="img/back5.jpg"><img src="img/back5.jpg" alt=""></a>
                 <div class="inner">
                     <p>18 Most Terrifying<br> Footage Movies In 2018</p>
                     <a href="#"> LEARN MORE</a>
                 </div>
             </article>
             <article class="item">
+                <a href="img/img5.jpg"><img src="img/img5.jpg" alt=""></a>
                 <div class="inner"></div>
             </article>
             <article class="item">
+                <a href="img/img7.jpg"><img src="img/img7.jpg" alt=""></a>
                 <div class="inner">
                 </div>
             </article>
